# cookiecutter-python-project

./: CHANGELOG.md  LICENSE  README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  mypy.ini  pyproject.toml  setup.py  tox.ini
{{cookiecutter.project_slug}}/.github/workflows/: tests.yml
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.root_package}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.root_package}}/: __init__.py  __version__.py
