[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.project_version }}"
description = "{{ cookiecutter.project_short_description }}"
readme = "README.md"
homepage = "{{ cookiecutter.project_url }}"
repository = "{{ cookiecutter.project_url }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
license = "{{ cookiecutter.project_license }}"
classifiers = [
    "Intended Audience :: Developers",
    {% if cookiecutter.project_license == 'Proprietary' -%}
    "Private :: Do Not Upload",
    {% endif -%}
]
include = [
    "CHANGELOG.md"
]

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
black = "^19.10b0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"
